--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./bin/www.js",
+      "src": "./app.js",
       "use": "@vercel/node@2.5.10"
     }
   ],
